--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-ckeditor==6.0.0
 django-countries==7.2.1
 django-crispy-forms==1.11.2
 django-embed-video==1.4.0
+django-environ==0.8.1
 django-js-asset==1.2.2
 django-mptt==0.12.0
 idna==2.10
