--- a/testProject/.env
+++ b/testProject/.env
@@ -7,5 +7,5 @@ DB_USER=smile
 DB_PASSWORD=password
 
 
-EMAIL_HOST_USER=ouerxiao@gmail.com
-EMAIL_HOST_PASSWORD=wclalrdlgerhyquh
+EMAIL_HOST_USER=xxx@gmail.com
+EMAIL_HOST_PASSWORD=xxxx
